# agentic-harness

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: code-executor-local.md  code-executor.md  code-reviewer-local.md  code-reviewer.md  critique-local.md  developer-local.md  developer.md  po-local.md  po-mode-b-local.md  sot-bootstrap-local.md  sot-drift-check-local.md
cli/: main.py
docs/: ARCHITECTURE.md  PROJECT_SCAFFOLD.md
docs/DECISIONS/: ADR-011-local-claude-runner.md  ADR-012-agent-team-redefinition.md  ADR-013-gh-backend-path-based.md  ADR-014-exclusive-labels.md  ADR-016-stale-lock-detection.md  ADR-017-sot-auto-update.md  ADR-018-critique-and-cost-tools.md  ADR-019-sot-lean-default.md  ADR-020-tui-dashboard.md  _TEMPLATE.md
orchestrator/: __init__.py  agents.py  claude.py  code_tools.py  cost_report.py  dashboard.py  gh.py  git_apply.py  llm.py  lock.py  poller.py  pr_context.py  source_of_truth.py
orchestrator/runners/: __init__.py  api.py  local_claude.py
scripts/: scaffold-init.sh  setup-local-launchd.sh  smoke-local-mode.sh
templates/.hermes/scripts/: palette-executor.sh  palette-reviewer.sh
