[project]
name = "agentic-harness"
version = "0.1.0"
description = "Project-agnostic agentic coding harness — label-based workflow."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.scripts]
ah = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "cli*"]

[tool.ruff]
line-length = 100
